--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "@types/nodemailer": "^7.0.10",
     "rimraf": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -20,6 +21,7 @@
   "dependencies": {
     "cron": "^2.4.4",
     "dotenv": "^17.3.1",
-    "env-var": "^7.5.0"
+    "env-var": "^7.5.0",
+    "nodemailer": "^8.0.1"
   }
 }
