--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,13 @@
 
 PORT=
 MAILER_SERVICE=gmail
-MAILER_EMAIL=
+MAILER_EMAIL=brunobenavent.mexico
 MAILER_SECRET_KEY=
-PROD=
+PROD=false
+
+
+
+MONGO_URL=mongodb://bruno:123456@localhost:27017
+MONGO_DB_NAME=NOC
+MONGO_USER=bruno
+MONGO_PASS=123456
