--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cron": "^2.4.4",
     "dotenv": "^17.3.1",
     "env-var": "^7.5.0",
+    "mongoose": "^9.2.1",
     "nodemailer": "^8.0.1"
   }
 }
