implementando postgress datasource

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,8 @@ MONGO_URL=mongodb://bruno:123456@localhost:27017
 MONGO_DB_NAME=NOC
 MONGO_USER=bruno
 MONGO_PASS=123456
+
+POSTGRES_URL="postgresql://postgres:123456@localhost:5432/NOC"
+POSTGRES_USER=postgres
+POSTGRES_PASS=123456
+POSTGRES_DB=NOC
